// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import option false: errors 1`] = `Array []`;

exports[`import option false: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and print;
@import url(test.css) SCREEN AND PRINT;
@import url(test.css)screen and print;
@import url(test.css)  screen and print;
@import url(test-media.css) screen and print;
@import url(test-other.css) (min-width: 100px);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css#hash);
@import url(http://example.com/style.css?#hash);
@import url(http://example.com/style.css?foo=bar#hash);
@import url(http://example.com/other-style.css) screen and print;
@import url(http://example.com/other-style.css) screen and print;
@import url(\\"//example.com/style.css\\");
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}
@import url('query.css?foo=1&bar=1');
@import url('other-query.css?foo=1&bar=1#hash');
@import url('other-query.css?foo=1&bar=1#hash') screen and print;
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

@import url('./relative.css');
@import url('../import/top-relative.css');
@import url(~package/tilde.css);
@import url(~aliasesImport/alias.css);
@import url('./url.css');

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option false: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
var urlEscape = require(\\"../../../src/runtime/url-escape.js\\");
var ___CSS_LOADER_URL___0___ = urlEscape(require(\\"./img.png\\"));

// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and print;\\\\n@import url(test.css) SCREEN AND PRINT;\\\\n@import url(test.css)screen and print;\\\\n@import url(test.css)  screen and print;\\\\n@import url(test-media.css) screen and print;\\\\n@import url(test-other.css) (min-width: 100px);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css#hash);\\\\n@import url(http://example.com/style.css?#hash);\\\\n@import url(http://example.com/style.css?foo=bar#hash);\\\\n@import url(http://example.com/other-style.css) screen and print;\\\\n@import url(http://example.com/other-style.css) screen and print;\\\\n@import url(\\\\\\"//example.com/style.css\\\\\\");\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n@import url('query.css?foo=1&bar=1');\\\\n@import url('other-query.css?foo=1&bar=1#hash');\\\\n@import url('other-query.css?foo=1&bar=1#hash') screen and print;\\\\n@import url('https://fonts.googleapis.com/css?family=Roboto');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n@import url('./relative.css');\\\\n@import url('../import/top-relative.css');\\\\n@import url(~package/tilde.css);\\\\n@import url(~aliasesImport/alias.css);\\\\n@import url('./url.css');\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\", \\"\\"]);

"
`;

exports[`import option false: warnings 1`] = `Array []`;

exports[`import option true and modules \`false\`: errors 1`] = `Array []`;

exports[`import option true and modules \`false\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    3,
    ".test {
  a: a;
}
",
    "screen and print",
  ],
  Array [
    5,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    4,
    ".test {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
    "",
  ],
  Array [
    6,
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    7,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    8,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    9,
    ".other-query {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
    "",
  ],
  Array [
    10,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    12,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    13,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true and modules \`false\`: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\"), \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./url.css\\"), \\"\\");
var urlEscape = require(\\"../../../src/runtime/url-escape.js\\");
var ___CSS_LOADER_URL___0___ = urlEscape(require(\\"./img.png\\"));

// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\", \\"\\"]);

"
`;

exports[`import option true and modules \`false\`: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`import option true and modules \`global\`: errors 1`] = `Array []`;

exports[`import option true and modules \`global\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    3,
    ".test {
  a: a;
}
",
    "screen and print",
  ],
  Array [
    5,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    4,
    ".test {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
    "",
  ],
  Array [
    6,
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    7,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    8,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    9,
    ".other-query {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
    "",
  ],
  Array [
    10,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    12,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    13,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true and modules \`global\`: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\"), \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./url.css\\"), \\"\\");
var urlEscape = require(\\"../../../src/runtime/url-escape.js\\");
var ___CSS_LOADER_URL___0___ = urlEscape(require(\\"./img.png\\"));

// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\", \\"\\"]);

"
`;

exports[`import option true and modules \`global\`: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`import option true and modules \`local\`: errors 1`] = `Array []`;

exports[`import option true and modules \`local\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._3fDHa2l1HOcl9VXVfSKtB7 {
  a: a;
}
",
    "",
  ],
  Array [
    3,
    "._3fDHa2l1HOcl9VXVfSKtB7 {
  a: a;
}
",
    "screen and print",
  ],
  Array [
    5,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    4,
    ".f63QYE3dlpdhZuYg8R4pd {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
    "",
  ],
  Array [
    6,
    "._1lN7KGFmbEaXH8rJdLC9cT {
  d: d
}
",
    "",
  ],
  Array [
    7,
    "._2FiPFdRUJ6bc--oLN32vUX {
  e: e;
}
",
    "",
  ],
  Array [
    8,
    "._2nQ7ONr22lmMu683ljj0MN {
  f: f;
}
",
    "",
  ],
  Array [
    9,
    "._2nQ7ONr22lmMu683ljj0MN {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
    "",
  ],
  Array [
    10,
    "._37G_Iu-0wcPjXN9ZhzZjlT {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    "._4a-iWS8tumU5J8-oW8LlR {
  color: black;
}
",
    "",
  ],
  Array [
    12,
    "._2VXavzz3TUKPrbI3S1tkrW {
  color: yellow;
}
",
    "",
  ],
  Array [
    13,
    "._2E2zpPgFs4vJaVymauWk3p {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    "._1N9oVhfOd30-kQu9zrdhrJ {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.hnxX78DgkaA2kCp_BPbLd {
  a: b c d;
}

._1Lug_45kZL-M7XuNeM4SCw {
  @import 'path.css';
}

._1E9CLkKp-0idM8IkvZwXn9 {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true and modules \`local\`: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\"), \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./url.css\\"), \\"\\");
var urlEscape = require(\\"../../../src/runtime/url-escape.js\\");
var ___CSS_LOADER_URL___0___ = urlEscape(require(\\"./img.png\\"));

// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.hnxX78DgkaA2kCp_BPbLd {\\\\n  a: b c d;\\\\n}\\\\n\\\\n._1Lug_45kZL-M7XuNeM4SCw {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n._1E9CLkKp-0idM8IkvZwXn9 {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\", \\"\\"]);

// Exports
exports.locals = {
	\\"class\\": \\"hnxX78DgkaA2kCp_BPbLd\\",
	\\"foo\\": \\"_1Lug_45kZL-M7XuNeM4SCw\\",
	\\"background\\": \\"_1E9CLkKp-0idM8IkvZwXn9\\"
};"
`;

exports[`import option true and modules \`local\`: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`import option true and modules \`true\`: errors 1`] = `Array []`;

exports[`import option true and modules \`true\`: module (evaluated) 1`] = `
Array [
  Array [
    2,
    "._3fDHa2l1HOcl9VXVfSKtB7 {
  a: a;
}
",
    "",
  ],
  Array [
    3,
    "._3fDHa2l1HOcl9VXVfSKtB7 {
  a: a;
}
",
    "screen and print",
  ],
  Array [
    5,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    4,
    ".f63QYE3dlpdhZuYg8R4pd {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
    "",
  ],
  Array [
    6,
    "._1lN7KGFmbEaXH8rJdLC9cT {
  d: d
}
",
    "",
  ],
  Array [
    7,
    "._2FiPFdRUJ6bc--oLN32vUX {
  e: e;
}
",
    "",
  ],
  Array [
    8,
    "._2nQ7ONr22lmMu683ljj0MN {
  f: f;
}
",
    "",
  ],
  Array [
    9,
    "._2nQ7ONr22lmMu683ljj0MN {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
    "",
  ],
  Array [
    10,
    "._37G_Iu-0wcPjXN9ZhzZjlT {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    "._4a-iWS8tumU5J8-oW8LlR {
  color: black;
}
",
    "",
  ],
  Array [
    12,
    "._2VXavzz3TUKPrbI3S1tkrW {
  color: yellow;
}
",
    "",
  ],
  Array [
    13,
    "._2E2zpPgFs4vJaVymauWk3p {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    "._1N9oVhfOd30-kQu9zrdhrJ {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.hnxX78DgkaA2kCp_BPbLd {
  a: b c d;
}

._1Lug_45kZL-M7XuNeM4SCw {
  @import 'path.css';
}

._1E9CLkKp-0idM8IkvZwXn9 {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true and modules \`true\`: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\"), \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./url.css\\"), \\"\\");
var urlEscape = require(\\"../../../src/runtime/url-escape.js\\");
var ___CSS_LOADER_URL___0___ = urlEscape(require(\\"./img.png\\"));

// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.hnxX78DgkaA2kCp_BPbLd {\\\\n  a: b c d;\\\\n}\\\\n\\\\n._1Lug_45kZL-M7XuNeM4SCw {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n._1E9CLkKp-0idM8IkvZwXn9 {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\", \\"\\"]);

// Exports
exports.locals = {
	\\"class\\": \\"hnxX78DgkaA2kCp_BPbLd\\",
	\\"foo\\": \\"_1Lug_45kZL-M7XuNeM4SCw\\",
	\\"background\\": \\"_1E9CLkKp-0idM8IkvZwXn9\\"
};"
`;

exports[`import option true and modules \`true\`: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`import option true: errors 1`] = `Array []`;

exports[`import option true: module (evaluated) 1`] = `
Array [
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    3,
    ".test {
  a: a;
}
",
    "screen and print",
  ],
  Array [
    5,
    "a {
  b: b;
}
",
    "((min-width: 100px)) and (screen and print)",
  ],
  Array [
    4,
    ".test {
  c: c;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and print",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
    "",
  ],
  Array [
    6,
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    7,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    8,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    9,
    ".other-query {
  f: f;
}
",
    "screen and print",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
    "",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
    "",
  ],
  Array [
    10,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    12,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    13,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true: module 1`] = `
"exports = module.exports = require(\\"../../../src/runtime/api.js\\")(false);
// Imports
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\"), \\"screen and print\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\"), \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\", \\"\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and print\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\"), \\"screen and print\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\", \\"\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\", \\"\\"]);
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\"), \\"\\");
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./url.css\\"), \\"\\");
var urlEscape = require(\\"../../../src/runtime/url-escape.js\\");
var ___CSS_LOADER_URL___0___ = urlEscape(require(\\"./img.png\\"));

// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\", \\"\\"]);

"
`;

exports[`import option true: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;
